--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ img {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  width: 496px;
+  max-width: 496px;
   height: 120px;
 }
 
@@ -255,6 +255,10 @@ img {
   margin-bottom: 16px;
 }
 /**------------------- PORTFOLIO buttons -----------------*/
+.portfolio {
+  padding-top: 96px;
+}
+
 .pf-btn {
   background-color: var(--light-body-color);
   color: var(--accent-color);
@@ -266,8 +270,32 @@ img {
   letter-spacing: 0.04em;
   align-items: center;
   text-align: center;
+  padding: 12px 24px;
 }
 .pf-btn:hover,
 .pf-btn:focus {
   color: var(--white-background-color);
+  border: 1px solid transparent;
+}
+
+.pf-btn-list {
+  justify-content: center;
+  margin-bottom: 72px;
+}
+
+.pf-list {
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.pf-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.pf-card-descr {
+  padding: 32px 16px;
+  border: 1px solid var(--light-accent-color);
+  border-top: none;
+  margin-bottom: 8px;
 }
